@@ -31,11 +31,6 @@
 #include "debugger.h"
 #endif				/* #ifndef FUSE_DEBUGGER_H */
 
-int
-debugger_breakpoint_add( debugger_breakpoint_type type, int page,
-			 libspectrum_word value, size_t ignore,
-			 debugger_breakpoint_life life,
-			 debugger_expression *condition );
 int debugger_breakpoint_remove( size_t id );
 int debugger_breakpoint_remove_all( void );
 int debugger_breakpoint_clear( libspectrum_word address );
